			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04p: *********************************

************************* Version 8.04o: *********************************

BUG: (5/30/06, GVG) Size interactively does not show preview highlight (Bug #1075).
FIX: SizeListener.java:mouseMoved() is active again (commented out in 1.34 version. Not clear why.

BUG: (5/30/06, DN) Client doesn't show fresh ExplorerTree on startup.
FIX: In ServerJobManager write latest snapshot on connection.
     In ClientJobManager show initial snapshot immediately.

BUG: (5/30/06, GVG) Include/Exclude options not working when more than 1 signal included a sweep (Bug #1077)
FIX: The code to retrieve the correct sweep of a given AnalogSignal was incorrect. Extra code and refactorization
to guarantee the correct index is retrieved from the Explorer. Disable direct access to Analysis.sweeps and WaveformWindow.sweepSignals
lists.

IMP: (5/30/06, SMR) Added drop shadow to highlighted text (Bug #747).

BUG: (5/30/06, SMR) Renaming a cell group that has heterogenous cell names
     fails (Bug #1073).
FIX: In CellChangeJobs.RenameCellGroup.doIt(), detect groups with different-
     named cells, and force them to the same group.

IMP/MAN: (5/30/06, SMR) New command: "Tool / Network / Show All Networks"
     shows every network in a different color (Bug #943).

IMP/MAN: (5/30/06, SMR) New "Technology" preference allows layout transistors
     to be rotated 90 degrees (Bug #369).

BUG: (5/30/06, SMR) IRSIM stimuli can get out of order.
FIX: In Analyser.newVector(), change the line
		afterSV.value = curTime + stepSze - insertTime / cmdFileUnits;
     to be:
		afterSV.value = (curTime + stepSze - insertTime) / cmdFileUnits;

BUG: (5/30/06, SMR) Waveform window crashes when too many panels (Bug #1071)
FIX: Fixed default panel sizes.  Also fixed other bugs in waveform window.
