@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04p: *********************************
 
+IMP: (5/31/06, SMR) "Select Object" now scrolls through the list as search
+     text is typed. (Bug #965)
+
 ************************* Version 8.04o: *********************************
 
 BUG: (5/30/06, GVG) Size interactively does not show preview highlight (Bug #1075).
